# VulpesRender

./: .gitattributes  .gitignore  .gitmodules  BackupVSProjectFiles.7z  BaseScene.cpp  BaseScene.h  CMakeLists.txt  CMakeListsOld.txt  Doxyfile  Doxyfile-mcss  ReadMe.md  ReadMe.txt  VulpesRender2.cpp  VulpesRender2.sln  VulpesRender2.vcxproj  VulpesRender2.vcxproj.filters  _alloc_common_8hpp.html  _alloc_common_8hpp.js  _alloc_common_8hpp.xml  _alloc_common_8hpp__dep__incl.map  _alloc_common_8hpp__dep__incl.md5  _alloc_common_8hpp__incl.map  _alloc_common_8hpp__incl.md5  _alloc_common_8hpp_source.html  _allocation_8cpp.html  _allocation_8cpp__incl.map  _allocation_8cpp__incl.md5  _allocation_8cpp_source.html  _allocation_8hpp.html  _allocation_8hpp.js  _allocation_8hpp__dep__incl.map  _allocation_8hpp__dep__incl.md5  _allocation_8hpp__incl.map  _allocation_8hpp__incl.md5  _allocation_8hpp_source.html  _allocation_collection_8cpp.html  _allocation_collection_8cpp__incl.map  _allocation_collection_8cpp__incl.md5  _allocation_collection_8cpp_source.html  _allocation_collection_8hpp.html  (+3327 more)
alloc/: CMakeLists.txt
alloc/include/: Allocation.hpp  AllocationRequirements.hpp  Allocator.hpp  DebugVisualization.hpp
alloc/src/: AllocCommon.hpp  Allocation.cpp  AllocationCollection.cpp  AllocationCollection.hpp  Allocator.cpp  AllocatorImpl.cpp  AllocatorImpl.hpp  DebugVisualization.cpp  MemoryBlock.cpp  MemoryBlock.hpp  Suballocation.hpp
alloc2/: CMakeLists.txt
alloc2/include/: Allocation.hpp  AllocationTypes.hpp  Allocator.hpp  Defrag.hpp
alloc2/src/: Config.hpp  vprMutex.hpp
command/: CMakeLists.txt  CommandPool.cpp  CommandPool.h  TransferPool.cpp
command/include/: CommandPool.hpp
command/src/: CommandPool.cpp
common/: CreateInfoBase.hpp  ForwardDecl.hpp  VkDebug.h  vkAssert.h  vkAssert.hpp  vk_constants.h  vpr_stdafx.h
core/: CMakeLists.txt  Instance.cpp  Instance.h  LogicalDevice.cpp  LogicalDevice.h  PhysicalDevice.cpp
core/include/: Instance.hpp  LogicalDevice.hpp  PhysicalDevice.hpp  SurfaceKHR.hpp  Swapchain.hpp  VkDebugUtils.hpp
core/src/: Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  SurfaceKHR.cpp  Swapchain.cpp
docs/: Doxyfile
ext/MoltenVK/: README_MoltenVK_UserGuide.md
gui/: imguiShaders.h  imguiWrapper.cpp  imguiWrapper.h
html/: annotated.html  classvpr_1_1_allocation.html  classvpr_1_1_allocator.html  classvpr_1_1_command_pool.html  classvpr_1_1_descriptor_set.html  classvpr_1_1_descriptor_set_layout.html  classvpr_1_1_event.html  classvpr_1_1_fence.html  classvpr_1_1_framebuffer.html  classvpr_1_1_graphics_pipeline.html  classvpr_1_1_image.html  classvpr_1_1_memory_block.html  classvpr_1_1_physical_device.html  classvpr_1_1_pipeline_cache.html  classvpr_1_1_sampler.html  classvpr_1_1_surface_k_h_r.html  group___command.html  group___core.html  group___resources.html  group___synchronization.html  index.html  namespacestd.html  namespacevpr.html  structvpr_1_1_allocation_requirements.html  structvpr_1_1_graphics_pipeline_info.html  structvpr_1_1_suballocation.html  structvpr_1_1_suballocation_request.html  structvpr_1_1_vk_debug_utils_functions.html  structvpr_1_1_vpr_extension_pack.html
include/: BaseScene.h  BaseScene.hpp  BaseSceneConfig.hpp  ForwardDecl.h  ForwardDecl.hpp  vpr_stdafx.h
include/alloc/: AllocCommon.hpp  Allocation.hpp  (+4 more)
render/: CMakeLists.txt  DepthStencil.cpp  DepthStencil.h  Framebuffer.cpp  Framebuffer.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Multisampling.cpp  Multisampling.h  Renderpass.cpp  Renderpass.h  Swapchain.cpp  Swapchain.h
render/include/: Framebuffer.hpp  GraphicsPipeline.hpp  Renderpass.hpp
render/src/: Framebuffer.cpp  GraphicsPipeline.cpp  Renderpass.cpp
resource/: Allocator.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Image.cpp  Image.h  PipelineCache.cpp  ShaderModule.cpp  ShaderModule.h  Texture.h  VertexTypes.h
resource/include/: BufferDepracated.hpp  BufferDeprecated.hpp  DescriptorPool.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  ImageDeprecated.hpp  PipelineCache.hpp  PipelineLayout.hpp  Sampler.hpp  ShaderModule.hpp
resource/src/: BufferDeprecated.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  PipelineCache.cpp  PipelineLayout.cpp  Sampler.cpp  ShaderModule.cpp
scenes/: Arcball.cpp  ArcballScene.cpp  House.cpp  House.h  Triangle.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+110 more)
src/: BaseScene.cpp
sync/: CMakeLists.txt
sync/include/: Event.hpp  Fence.hpp  Semaphore.hpp
sync/src/: Event.cpp  Fence.cpp  Semaphore.cpp
util/: AABB.cpp  AABB.h
vpr_command/: CMakeLists.txt  CommandPool.hpp
xml/: _allocation_8cpp.xml  _allocation_8hpp.xml  _allocation_collection_8cpp.xml  _allocation_collection_8hpp.xml  _allocator_8cpp.xml  _allocator_impl_8hpp.xml  _create_info_base_8hpp.xml  _debug_visualization_8cpp.xml  _descriptor_pool_8hpp.xml  _descriptor_set_8cpp.xml  _descriptor_set_8hpp.xml  _descriptor_set_layout_8hpp.xml  _event_8hpp.xml  _fence_8cpp.xml  _forward_decl_8hpp.xml  _image_deprecated_8cpp.xml  _instance_8cpp.xml  _memory_block_8cpp.xml  _physical_device_8hpp.xml  _pipeline_cache_8hpp.xml  _pipeline_layout_8hpp.xml  _read_me_8md.xml  _renderpass_8cpp.xml  _renderpass_8hpp.xml  _sampler_8cpp.xml  _sampler_8hpp.xml  _semaphore_8cpp.xml  _surface_k_h_r_8cpp.xml  _surface_k_h_r_8hpp.xml  _swapchain_8hpp.xml  _vk_debug_utils_8hpp.xml  classvpr_1_1_buffer.xml  classvpr_1_1_descriptor_set.xml  classvpr_1_1_descriptor_set_layout.xml  classvpr_1_1_device.xml  classvpr_1_1_event.xml  classvpr_1_1_framebuffer.xml  classvpr_1_1_graphics_pipeline.xml  classvpr_1_1_instance.xml  classvpr_1_1_memory_block.xml  (+35 more)
(+187 files in other folders)
